[Refactoring] remove usage of deprecated APIs